--- a/src/app/enroll/enroll.page.html
+++ b/src/app/enroll/enroll.page.html
@@ -1,60 +1,80 @@
 <ion-header>
-  <ion-toolbar color="tertiary">
-    <ion-title class="ion-text-uppercase">Enroll
-    </ion-title>
-    <ion-back-button autoHide="false" slot="start"></ion-back-button>
-  </ion-toolbar>
+	<ion-toolbar color="tertiary">
+		<ion-title class="ion-text-uppercase">Enroll
+		</ion-title>
+		<ion-back-button autoHide="false" slot="start"></ion-back-button>
+	</ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <div class="container ion-padding-top ion-padding-bottom">
-    <ion-text>
-      <strong>Enrollment for:</strong>
-      <span class="ion-text-capitalize">
-        Bricklaying and Plastering
-      </span>
-    </ion-text>
-    <ion-item class="ion-margin-top">
-      <strong>Upload the following documents:</strong>
-    </ion-item>
-    <ion-grid>
-      <ion-row class="ion-text-capitalize">
-        <ion-col size="6">
-          <div (click)="fileinput1.click()">
-            <ion-icon name="cloud-upload-outline" *ngIf="!idUrl"></ion-icon>
-            <ion-icon name="thumbs-up-sharp" *ngIf="idUrl"></ion-icon>
-            <p>Certified ID copy</p>
-          </div>
-        </ion-col>
-        <ion-col size="6">
-          <div (click)="fileinput2.click()">
-            <ion-icon name="cloud-upload-outline" *ngIf="!cvUrl"></ion-icon>
-            <ion-icon name="thumbs-up-sharp" *ngIf="cvUrl"></ion-icon>
-            <p>CV</p>
-          </div>
-        </ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-col size="6" class="ion-no-padding-top">
-          <div (click)="fileinput3.click()">
-            <ion-icon name="cloud-upload-outline" *ngIf="!resultsUrl"></ion-icon>
-            <ion-icon name="thumbs-up-sharp" *ngIf="resultsUrl"></ion-icon>
-            <p> Certified NQF level 1 or Grade 9 results</p>
-          </div>
-        </ion-col>
-        <ion-col size="6" class="ion-no-padding-top">
-          <div (click)="fileinput4.click()">
-            <ion-icon name="cloud-upload-outline" *ngIf="!proofOfPayUrl"></ion-icon>
-            <ion-icon name="thumbs-up-sharp" *ngIf="proofOfPayUrl"></ion-icon>
-            <p> R500 Enrollment fee</p>
-          </div>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
-    <ion-button class="ion-margin-bottom ion-text-capitalize" color="tertiary" expand="full" (click)="submit()">
-      Submit
-    </ion-button>
-  </div>
+	<div class="container ion-padding-top ion-padding-bottom">
+		<ion-text>
+			<strong>Enrollment for:</strong>
+			<span class="ion-text-capitalize">
+				Bricklaying and Plastering
+			</span>
+		</ion-text>
+		<ion-item class="ion-margin-top">
+			<strong>Upload the following documents:</strong>
+		</ion-item>
+		<ion-grid>
+			<ion-row class="ion-text-capitalize">
+				<ion-col size="6">
+					<div (click)="fileinput1.click()">
+						<ion-icon name="cloud-upload-outline" *ngIf="!idUrl"></ion-icon>
+						<ion-icon name="thumbs-up-sharp" *ngIf="idUrl"></ion-icon>
+						<p *ngIf="!idUrl">Certified ID copy</p>
+						<p *ngIf="idUrl" class="docName">
+							<strong>ID copy</strong>
+							<br />
+							{{id.name}}
+						</p>
+					</div>
+				</ion-col>
+				<ion-col size="6">
+					<div (click)="fileinput2.click()">
+						<ion-icon name="cloud-upload-outline" *ngIf="!cvUrl"></ion-icon>
+						<ion-icon name="thumbs-up-sharp" *ngIf="cvUrl"></ion-icon>
+						<p *ngIf="!cvUrl">CV</p>
+						<p *ngIf="cvUrl" class="docName">
+							<strong>CV</strong>
+							<br />
+							{{cv.name}}
+						</p>
+					</div>
+				</ion-col>
+			</ion-row>
+			<ion-row>
+				<ion-col size="6" class="ion-no-padding-top">
+					<div (click)="fileinput3.click()">
+						<ion-icon name="cloud-upload-outline" *ngIf="!resultsUrl"></ion-icon>
+						<ion-icon name="thumbs-up-sharp" *ngIf="resultsUrl"></ion-icon>
+						<p *ngIf="!resultsUrl"> Certified NQF level 1 or Grade 9 results</p>
+						<p *ngIf="resultsUrl" class="docName">
+							<strong>Results</strong>
+							<br />
+							{{results.name}}
+						</p>
+					</div>
+				</ion-col>
+				<ion-col size="6" class="ion-no-padding-top">
+					<div (click)="fileinput4.click()">
+						<ion-icon name="cloud-upload-outline" *ngIf="!proofOfPayUrl"></ion-icon>
+						<ion-icon name="thumbs-up-sharp" *ngIf="proofOfPayUrl"></ion-icon>
+						<p *ngIf="!proofOfPayUrl"> R500 Enrollment fee</p>
+						<p *ngIf="proofOfPayUrl" class="docName">
+							<strong>Enrollment fee</strong>
+							<br />
+							{{pop.name}}
+						</p>
+					</div>
+				</ion-col>
+			</ion-row>
+		</ion-grid>
+		<ion-button class="ion-margin-bottom ion-text-capitalize" color="tertiary" expand="full" (click)="submit()">
+			Submit
+		</ion-button>
+	</div>
 </ion-content>
 
 <input type="file" (change)="uploadID($event)" style="display:none" accept="application/pdf" #fileinput1>
