--- a/src/app/enrolledcourses/enrolledcourses.page.scss
+++ b/src/app/enrolledcourses/enrolledcourses.page.scss
@@ -67,10 +67,10 @@ ion-content {
                 bottom  : 16px;
             }
 
-            .button {
-                position: absolute;
-                bottom  : 10px;
-            }
+            // .button {
+            //     position: absolute;
+            //     bottom  : 10px;
+            // }
         }
 
     }
