--- a/src/app/enroll/enroll.page.scss
+++ b/src/app/enroll/enroll.page.scss
@@ -1,40 +1,48 @@
 ion-content {
-    .container {
-        ion-text {
-            font-size: 15px;
-        }
+	.container {
+		ion-text {
+			font-size: 15px;
+		}
 
-        ion-item {
-            strong {
-                font-size: 15px;
-            }
-        }
+		ion-item {
+			strong {
+				font-size: 15px;
+			}
+		}
 
-        ion-grid {
-            ion-row {
-                ion-col {
-                    padding: 10px;
+		ion-grid {
+			ion-row {
+				ion-col {
+					padding: 10px;
 
-                    div {
-                        border          : 1px solid #c2c2c2;
-                        width           : 100%;
-                        height          : 27vh;
-                        text-align      : center;
-                        padding         : 16px;
-                        background-color: #f7f7f7;
+					div {
+						border          : 1px solid #c2c2c2;
+						width           : 100%;
+						height          : 27vh;
+						text-align      : center;
+						padding         : 16px;
+						background-color: #f7f7f7;
 
-                        ion-icon {
-                            font-size    : 30px;
-                            margin-bottom: 10px;
-                            padding-top   : 5vh;
-                        }
+						ion-icon {
+							font-size    : 30px;
+							margin-bottom: 10px;
+							padding-top  : 5vh;
+						}
 
-                        p {
-                            font-size: 12px;
-                        }
-                    }
-                }
-            }
-        }
-    }
+						p {
+							font-size: 12px;
+						}
+
+						.docName {
+							overflow          : hidden;
+							text-overflow     : ellipsis;
+							display           : -webkit-box;
+							-webkit-box-orient: vertical;
+							-webkit-line-clamp: 3;
+						}
+					}
+				}
+			}
+		}
+	}
 }
