--- a/src/app/course/course.page.html
+++ b/src/app/course/course.page.html
@@ -64,18 +64,23 @@
 			</ion-row>
 		</ion-grid>
 		<ion-button class="ion-margin-bottom ion-text-capitalize" color="tertiary" expand="full"
-			*ngIf="applyBtn && !pending" (click)="apply()">
+			*ngIf="applyBtn && !pending && !registered" (click)="apply()">
 			Apply Now
 		</ion-button>
 
 		<ion-button class="ion-margin-bottom ion-text-capitalize" color="tertiary" expand="full"
-			*ngIf="!applyBtn && !pending" [disabled]="!applyBtn" (click)="apply()">
+			*ngIf="!applyBtn && !pending && !registered" [disabled]="!applyBtn" (click)="apply()">
 			Applications closed on {{course.closingDate | date: "d MMM yyyy"}}
 		</ion-button>
 
-		<ion-button class="ion-margin-bottom ion-text-capitalize" color="tertiary" expand="full" *ngIf="pending"
-			[disabled]="!applyBtn" (click)="apply()">
+		<ion-button class="ion-margin-bottom ion-text-capitalize" color="tertiary" expand="full"
+			*ngIf="!applyBtn && pending && !registered" [disabled]="!applyBtn" (click)="apply()">
 			Status pending
+		</ion-button>
+
+		<ion-button class="ion-margin-bottom ion-text-capitalize" color="tertiary" expand="full"
+			*ngIf="!applyBtn && !pending && registered" [disabled]="!applyBtn" (click)="apply()">
+			You've applied for this course
 		</ion-button>
 	</div>
 </ion-content>
