--- a/src/app/profile/edit/edit.page.html
+++ b/src/app/profile/edit/edit.page.html
@@ -12,49 +12,67 @@
 		<form [formGroup]="user" (submit)="update()">
 			<div>
 				<h5>Personal Information </h5>
-				<ion-list>
+				<ion-list class="ion-no-padding">
 					<ion-item>
 						<ion-label>First Name:</ion-label>
-						<ion-input type="text" formControlName="name" minlength="3" maxlength="30" required></ion-input>
+						<ion-input type="text" minlength="3" maxlength="30" formControlName="name" required>
+						</ion-input>
 					</ion-item>
 					<div class="validation-errors">
 						<ng-container *ngFor="let validation of validation_messages.name">
 							<div class="error-message"
-								*ngIf="user.get('name').hasError(validation.type) && (user.get('name').dirty || user.get('name').touched)">
+								*ngIf="user.get('name').hasError(validation.type) && user.get('name').touched">
 								<p class="error">{{ validation.message }}</p>
 							</div>
 						</ng-container>
 					</div>
 					<ion-item>
 						<ion-label>Last Name:</ion-label>
-						<ion-input type="text" formControlName="surname" minlength="3" maxlength="30"
-							[value]="currentUser.lastName" required>
+						<ion-input type="text" minlength="3" maxlength="30" formControlName="surname" required>
 						</ion-input>
 					</ion-item>
 					<div class="validation-errors">
 						<ng-container *ngFor="let validation of validation_messages.surname">
 							<div class="error-message"
-								*ngIf="user.get('surname').hasError(validation.type) && (user.get('surname').dirty || user.get('surname').touched)">
+								*ngIf="user.get('surname').hasError(validation.type) && user.get('surname').touched">
 								<p class="error">{{ validation.message }}</p>
 							</div>
 						</ng-container>
 					</div>
-					<ion-item >
+					<ion-item>
 						<ion-label id="labels" stacked>Cell number:</ion-label>
-						<ion-input color="white" type="tel" formControlName="cell" minlength="10" maxlength="10"
-							required></ion-input>
+						<ion-input type="tel" minlength="10" maxlength="10" formControlName="cell" required>
+						</ion-input>
 					</ion-item>
 					<div class="validation-errors">
 						<ng-container *ngFor="let validation of validation_messages.cell">
 							<div class="error-message"
-								*ngIf="user.get('cell').hasError(validation.type) && (user.get('cell').touched)">
+								*ngIf="user.get('cell').hasError(validation.type) && user.get('cell').touched">
 								<p class="error">{{ validation.message }}</p>
 							</div>
 						</ng-container>
 					</div>
+					<ion-item *ngIf="!id">
+						<ion-label id="labels" stacked>ID Number:</ion-label>
+						<ion-input color="white" type="tel" minlength="13" maxlength="13" formControlName="idNr"
+							required>
+						</ion-input>
+					</ion-item>
+					<div class="validation-errors">
+						<p>{{idnumErr}}</p>
+					</div>
+					<ion-item *ngIf="!id">
+						<ion-label id="labels" stacked>Date of Birth:</ion-label>
+						<ion-datetime type="Date" displayFormat="DD/MM/YYYY" [min]="minYear" [max]="maxYear"
+							formControlName="dob" required>
+						</ion-datetime>
+					</ion-item>
+					<div class="validation-errors">
+						<p>{{dobErr}}</p>
+					</div>
 				</ion-list>
 			</div>
-			<div >
+			<div>
 				<h5>Address</h5>
 				<ion-list style="padding-top: 0;">
 					<ion-item>
@@ -72,7 +90,7 @@
 						</ng-container>
 					</div>
 				</ion-list>
-				<div style="position: relative" *ngIf="editAddr">
+				<div style="position: relative" *ngIf="editAddr || !address">
 					<ion-searchbar debounce=500 (ionInput)="search($event)" [value]="selectedAddress"></ion-searchbar>
 					<div style="position: absolute; width: 100%; z-index: 999;">
 						<ion-list lines="none" *ngIf="addresses.length > 0">
@@ -90,18 +108,19 @@
 					</ion-item>
 				</ion-list>
 			</div>
-			<div *ngIf="currentUser.guardian">
+			<div *ngIf="age < 18">
 				<h5>Details of Guardian</h5>
 				<ion-list>
 					<ion-item>
 						<ion-label id="labels" stacked>Names:</ion-label>
 						<ion-input color="white" type="text" formControlName="gName" minlength="3" maxlength="30"
-							required></ion-input>
+							required>
+						</ion-input>
 					</ion-item>
 					<div class="validation-errors">
 						<ng-container *ngFor="let validation of validation_messages.gName">
 							<div class="error-message"
-								*ngIf="user.get('gName').hasError(validation.type) && (user.get('gName').dirty || user.get('gName').touched)">
+								*ngIf="user.get('gName').hasError(validation.type) && user.get('gName').touched">
 								<p class="error">{{ validation.message }}</p>
 							</div>
 						</ng-container>
@@ -109,12 +128,13 @@
 					<ion-item>
 						<ion-label id="labels" stacked>Last Name:</ion-label>
 						<ion-input color="white" type="text" formControlName="gSurname" minlength="3" maxlength="30"
-							required></ion-input>
+							required>
+						</ion-input>
 					</ion-item>
 					<div class="validation-errors">
-						<ng-container *ngFor="let validation of validation_messages.gSurname">
+						<ng-container *ngFor="let validation of validation_messages.surname">
 							<div class="error-message"
-								*ngIf="user.get('gSurname').hasError(validation.type) && (user.get('gSurname').dirty || user.get('gSurname').touched)">
+								*ngIf="user.get('surname').hasError(validation.type) && user.get('surname').touched">
 								<p class="error">{{ validation.message }}</p>
 							</div>
 						</ng-container>
@@ -122,12 +142,13 @@
 					<ion-item>
 						<ion-label id="labels" stacked>Cell Number:</ion-label>
 						<ion-input color="white" type="tel" formControlName="gCell" minlength="10" maxlength="10"
-							required></ion-input>
+							required>
+						</ion-input>
 					</ion-item>
 					<div class="validation-errors">
 						<ng-container *ngFor="let validation of validation_messages.gCell">
 							<div class="error-message"
-								*ngIf="user.get('gCell').hasError(validation.type) && (user.get('gCell').dirty || user.get('gCell').touched)">
+								*ngIf="user.get('gCell').hasError(validation.type) && user.get('gCell').touched">
 								<p class="error">{{ validation.message }}</p>
 							</div>
 						</ng-container>
