--- a/src/app/profile/profile.page.scss
+++ b/src/app/profile/profile.page.scss
@@ -32,6 +32,11 @@ ion-content {
 			.details {
 				width: 100%;
 
+				h1 {
+					font-size: 18px;
+					margin   : 0;
+				}
+
 				.heading {
 					background-color: #800020;
 					padding         : 10px;
