--- a/src/app/content/documents/documents.page.html
+++ b/src/app/content/documents/documents.page.html
@@ -31,7 +31,7 @@
           <h5 class="ion-no-margin">
             {{c.title}}
           </h5>
-          Date: {{c.uploadDate | date: "dd/MM/yyyy"}}
+          Date: {{c.date | date: "dd/MM/yyyy"}}
         </ion-text>
       </ion-item>
     </ion-list>
