--- a/src/app/enrolledcoursesinfo/enrolledcoursesinfo.page.html
+++ b/src/app/enrolledcoursesinfo/enrolledcoursesinfo.page.html
@@ -56,7 +56,7 @@
 					<ion-col size="6" class="ion-no-padding">
 					</ion-col>
 					<ion-col size="6" class="ion-no-padding">
-						<ion-button class="ion-text-capitalize" size="small" color="tertiary" expand="full">
+						<ion-button class="ion-text-capitalize" size="small" color="tertiary" expand="full" (click)="presentModal()">
 							<!-- routerLink="/payment"> -->
 							<ion-icon name="cloud-upload-outline"></ion-icon>Upload recipt
 						</ion-button>
