--- a/src/app/landing/landing.page.html
+++ b/src/app/landing/landing.page.html
@@ -1,6 +1,6 @@
 <ion-header>
 	<ion-toolbar color="tertiary">
-		<ion-icon name="notifications" class="ion-float-right ion-padding-end" color="light"></ion-icon>
+		<ion-icon name="notifications" class="ion-float-right ion-padding-end" color="light" routerLink="/notifications"></ion-icon>
 		<ion-menu-button slot="start"></ion-menu-button>
 		<ion-title>HOME</ion-title>
 	</ion-toolbar>
