--- a/src/app/course/course.page.html
+++ b/src/app/course/course.page.html
@@ -14,7 +14,7 @@
 				<div class="badges">
 					<button class="bedge ion-text-capitalize">
 						<span class="fa fa-star checked"></span>
-						4.5
+						{{this.rating}}
 					</button>
 					<button class="bedge ion-text-capitalize">
 						<i class="fa fa-book" aria-hidden="true"></i>
