--- a/src/app/landing/landing.page.html
+++ b/src/app/landing/landing.page.html
@@ -1,6 +1,7 @@
 <ion-header>
 	<ion-toolbar color="tertiary">
-		<ion-icon name="notifications" class="ion-float-right ion-padding-end" color="light" routerLink="/notifications"></ion-icon>
+		<ion-icon name="notifications" class="ion-float-right ion-padding-end" color="light"
+			routerLink="/notifications"></ion-icon>
 		<ion-menu-button slot="start"></ion-menu-button>
 		<ion-title>HOME</ion-title>
 	</ion-toolbar>
@@ -28,6 +29,8 @@
 							<ion-text>
 								<h1>{{c.name}}</h1>
 								<p>
+									<!-- {{ratings(c.id)}}
+									{{rating}} -->
 									<span class="fa fa-star checked"></span>
 									<span class="fa fa-star checked"></span>
 									<span class="fa fa-star checked"></span>
