--- a/src/app/enrolledcoursesinfo/rating/rating.page.html
+++ b/src/app/enrolledcoursesinfo/rating/rating.page.html
@@ -4,15 +4,25 @@
 		<h1><strong>{{course.name}}</strong></h1>
 		<p class="code">{{course.code}}</p>
 		<p class="rating">
-			<span class="fa fa-star"></span>
-			<span class="fa fa-star"></span>
-			<span class="fa fa-star"></span>
-			<span class="fa fa-star"></span>
-			<span class="fa fa-star"></span>
+			<span class="fa fa-star checked" *ngIf="rating[0] == 1" (click)="rate(0, 0)"></span>
+			<span class="fa fa-star checked" *ngIf="rating[1] == 2" (click)="rate(0, 1)"></span>
+			<span class="fa fa-star checked" *ngIf="rating[2] == 3" (click)="rate(0, 2)"></span>
+			<span class="fa fa-star checked" *ngIf="rating[3] == 4" (click)="rate(0, 3)"></span>
+			<span class="fa fa-star checked" *ngIf="rating[4] == 5" (click)="rate(0, 4)"></span>
+			<span class="fa fa-star" *ngIf="rating[0] == 0" (click)="rate(1, 0)"></span>
+			<span class="fa fa-star" *ngIf="rating[1] == 0" (click)="rate(2, 1)"></span>
+			<span class="fa fa-star" *ngIf="rating[2] == 0" (click)="rate(3, 2)"></span>
+			<span class="fa fa-star" *ngIf="rating[3] == 0" (click)="rate(4, 3)"></span>
+			<span class="fa fa-star" *ngIf="rating[4] == 0" (click)="rate(5, 4)"></span>
 		</p>
 		<p>{{course.description}}</p>
-		<ion-button class="ion-margin-bottom ion-text-capitalize" color="tertiary" expand="full">
-			Submit
+		<ion-button class="ion-margin-bottom ion-text-capitalize ion-float-left" fill="outline" color="tertiary"
+			(click)="closeModal()">
+			Rate Later
+		</ion-button>
+		<ion-button class="ion-margin-bottom ion-text-capitalize ion-float-right" color="tertiary"
+			[disabled]="!starRate" (click)="rateCourse()">
+			Rate Course
 		</ion-button>
 	</div>
 </ion-content>
