--- a/src/app/content/news/news.page.html
+++ b/src/app/content/news/news.page.html
@@ -13,9 +13,8 @@
 			<img src="/assets/images/content/announc.png">
 		</div>
 		<ion-text>
-			<h1>Announcements</h1>
-			<p class="ion-no-margin">Course:
-				<br />
+			<h1><strong>Announcements</strong></h1>
+			<p class="ion-no-margin">
 				{{courseName}}
 			</p>
 		</ion-text>
