--- a/src/app/enrolledcoursesinfo/enrolledcoursesinfo.page.html
+++ b/src/app/enrolledcoursesinfo/enrolledcoursesinfo.page.html
@@ -14,6 +14,10 @@
 				Download
 			</span>
 		</p>
+		<h5>Course Name:</h5>
+		<p>
+			{{course.name}}
+		</p>
 		<h5>Duration:</h5>
 		<p>
 			<i class="fa fa-clock-o" aria-hidden="true"></i>
@@ -56,10 +60,9 @@
 					<ion-col size="6" class="ion-no-padding">
 					</ion-col>
 					<ion-col size="6" class="ion-no-padding">
-						<ion-button class="ion-text-capitalize" size="small" color="tertiary" expand="full">
-							<!-- routerLink="/payment"> -->
+						<!-- <ion-button class="ion-text-capitalize" size="small" color="tertiary" expand="full">
 							<ion-icon name="cloud-upload-outline"></ion-icon>Upload recipt
-						</ion-button>
+						</ion-button> -->
 					</ion-col>
 				</ion-row>
 			</ion-grid>
