--- a/src/app/landing/landing.page.html
+++ b/src/app/landing/landing.page.html
@@ -29,13 +29,11 @@
 							<ion-text>
 								<h1>{{c.name}}</h1>
 								<p>
-									<!-- {{ratings(c.id)}}
-									{{rating}} -->
-									<span class="fa fa-star checked"></span>
-									<span class="fa fa-star checked"></span>
-									<span class="fa fa-star checked"></span>
-									<span class="fa fa-star"></span>
-									<span class="fa fa-star"></span>
+									<span class="fa fa-star" [ngClass]="(c.rating >  0) ? 'checked': ''"></span>
+									<span class="fa fa-star" [ngClass]="(c.rating >  1) ? 'checked': ''"></span>
+									<span class="fa fa-star" [ngClass]="(c.rating >  2) ? 'checked': ''"></span>
+									<span class="fa fa-star" [ngClass]="(c.rating >  3) ? 'checked': ''"></span>
+									<span class="fa fa-star" [ngClass]="(c.rating >  4) ? 'checked': ''"></span>
 								</p>
 								<p><strong>R{{c.fee}}</strong> </p>
 							</ion-text>
