--- a/src/app/notifications/notifications.page.html
+++ b/src/app/notifications/notifications.page.html
@@ -6,16 +6,80 @@
 </ion-header>
 <ion-content>
 	<ion-list>
-		<ion-item-sliding id="item100"  *ngFor="let n of [1,2,3,4,5,6,7,8,9,0]">
+		<ion-item-sliding *ngFor="let msg of [1,2,3,4,5,6,7,8,9,0]" class="big">
 			<ion-item>
+				<ion-avatar slot="start" class="Randomcolor"
+					[ngStyle]="{'background-color': colors('Avhashoni'.slice(0, 1))}">
+					<!-- {{msg.name | slice:0:1}} -->
+					A
+				</ion-avatar>
 				<ion-label>
-					<ion-note slot="end" class="float-right">
-						<strong style="color: #333; font-size: 12px;">10:45 AM</strong>
-					</ion-note>
-					<h2><strong style="color: #333;">HubStruck</strong></h2>
-					<p>A new message in your network fdfgf dfjkdf dsfgj</p>
+					<span class="font">
+						<span class="name">
+							Avhashoni
+						</span>
+						<span class="ion-float-right dateBig">
+							16:45
+						</span>
+					</span>
+					<span class="font">
+						Registration
+					</span>
+					<span class="hide "> &nbsp; - &nbsp; </span>
+					<span class="p">
+						Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+						the
+						industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
+						type
+						and scrambled it to make a type specimen book. It has survived not only five centuries, but also
+						the
+						leap into electronic typesetting, remaining essentially unchanged. It was popularised in the
+						1960s
+						with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with
+						desktop
+						publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+					</span>
 				</ion-label>
-				<ion-img slot="start" class="imageSize" src=".\assets\images\cropped-Deepeg-95x95.png"></ion-img>
+			</ion-item>
+			<ion-item-options side="end">
+				<ion-item-option color="danger">
+					<ion-icon slot="icon-only" name="trash"></ion-icon>
+				</ion-item-option>
+				<ion-item-option>
+					<ion-icon slot="icon-only" name="checkmark-circle-outline"></ion-icon>
+				</ion-item-option>
+			</ion-item-options>
+		</ion-item-sliding>
+		<ion-item-sliding class="small" *ngFor="let msg of [1,2,3,4,5,6,7,8,9,0]">
+			<ion-item>
+				<ion-avatar slot="start" class="Randomcolor"
+					[ngStyle]="{'background-color': colors('Avhashoni'.slice(0, 1))}">
+					A
+				</ion-avatar>
+				<ion-label>
+					<h2 class="font">
+						Avhashoni
+						<span class="ion-float-right dateSmall">
+							16:45
+						</span>
+					</h2>
+					<h3 class="font">
+						Registration
+					</h3>
+					<p>
+						Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+						the
+						industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
+						type
+						and scrambled it to make a type specimen book. It has survived not only five centuries, but also
+						the
+						leap into electronic typesetting, remaining essentially unchanged. It was popularised in the
+						1960s
+						with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with
+						desktop
+						publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+					</p>
+				</ion-label>
 			</ion-item>
 			<ion-item-options side="end">
 				<ion-item-option color="danger">
