--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -36,7 +36,7 @@
 							<ion-icon name="pencil-outline" class="ion-float-right" (click)=" editProfile()"></ion-icon>
 						</h1>
 					</div>
-					<div class="personal">
+					<div class="personal ion-padding-start">
 						<ion-row>
 							<ion-col size=1>
 								<ion-icon name="person-outline"></ion-icon>
@@ -80,10 +80,10 @@
 						</ion-row>
 					</div>
 					<div *ngIf="user.guardian">
-						<h1 class="pl-1">
+						<h1 class="pl-2">
 							Gardian Details
 						</h1>
-						<div class="gardian">
+						<div class="gardian ion-padding-start">
 							<ion-row>
 								<ion-col size=1>
 									<ion-icon name="person-outline"></ion-icon>
