--- a/src/app/profile/edit/edit.page.html
+++ b/src/app/profile/edit/edit.page.html
@@ -3,7 +3,7 @@
 		<ion-title>
 			Profile
 		</ion-title>
-		<ion-icon name="close" slot="end" (click)="closeModal()"></ion-icon>
+		<ion-icon name="close-circle-outline" slot="end" (click)="closeModal()"></ion-icon>
 	</ion-toolbar>
 </ion-header>
 
