--- a/android/app/src/main/res/xml/config.xml
+++ b/android/app/src/main/res/xml/config.xml
@@ -7,5 +7,9 @@
     <param name="onload" value="true"/>
   </feature>
 
+  <feature name="Downloader">
+    <param name="android-package" value="hr.integrator.cordova.plugins.downloader.Downloader"/>
+  </feature>
+
   
 </widget>
